# distributed-cloud-download-manager

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
backend/manager/: .env.example  requirements.txt  test_database.py  test_settings.py
backend/manager/alembic/: env.py
backend/manager/alembic/versions/: 60a88e7e9a6d_create_chunks_table.py  debd4d6d718a_create_workers_table.py  e91c7bcd85e9_create_downloads_table.py
backend/manager/app/: main.py
backend/manager/app/api/: chunks.py  downloads.py  health.py  router.py  workers.py
backend/manager/app/core/: logging.py
backend/manager/app/database/: database.py  init_db.py
backend/manager/app/db/: __init__.py  seed.py  session.py
backend/manager/app/models/: __init__.py  chunk.py  download.py  worker.py
backend/manager/app/repositories/: __init__.py  chunk_repository.py  download_repository.py  worker_repository.py
backend/manager/app/schemas/: __init__.py  chunk.py  download.py  worker.py
backend/manager/app/services/: __init__.py  chunk_service.py  chunk_splitter.py  download_service.py  worker_service.py
backend/shared/config/: settings.py
backend/worker/: .env.example
manager/: requirements.txt
manager/app/: main.py
manager/app/api/: downloads.py  health.py  workers.py
tests/: test_chunk_splitter.py
