[project]
name = "distributed-cloud-download-manager"
version = "0.1.0"
description = "Distributed Cloud Download Manager"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend"]